--- a/assets/styles/_less/theme/theme-scaffolding.less
+++ b/assets/styles/_less/theme/theme-scaffolding.less
@@ -402,7 +402,7 @@ text-maroon
 
 //Força tamanhos
 
-.width-grid {
+/*.width-grid {
   @force-grid-base: 4em;
   @force-grid-gutter: 1em;
   &-auto {
@@ -456,7 +456,7 @@ text-maroon
     width: 12*@force-grid-base + 11*@force-grid-gutter;
   }
 }
-
+*/
 .height-grid {
   @force-grid-base: 4em;
   @force-grid-gutter: 1em;
@@ -464,51 +464,51 @@ text-maroon
     height: auto;
   }
   &-1 {
-    height: @force-grid-base;
+    min-height: @force-grid-base;
   }
 
   &-2 {
-    height: 2*@force-grid-base + @force-grid-gutter;
+    min-height: 2*@force-grid-base + @force-grid-gutter;
   }
 
   &-3 {
-    height: 3*@force-grid-base + 2*@force-grid-gutter;
+    min-height: 3*@force-grid-base + 2*@force-grid-gutter;
   }
 
   &-4 {
-    height: 4*@force-grid-base + 3*@force-grid-gutter;
+    min-height: 4*@force-grid-base + 3*@force-grid-gutter;
   }
 
   &-5 {
-    height: 5*@force-grid-base + 4*@force-grid-gutter;
+    min-height: 5*@force-grid-base + 4*@force-grid-gutter;
   }
 
   &-6 {
-    height: 6*@force-grid-base + 5*@force-grid-gutter;
+    min-height: 6*@force-grid-base + 5*@force-grid-gutter;
   }
 
   &-7 {
-    height: 7*@force-grid-base + 6*@force-grid-gutter;
+    min-height: 7*@force-grid-base + 6*@force-grid-gutter;
   }
 
   &-8 {
-    height: 8*@force-grid-base + 7*@force-grid-gutter;
+    min-height: 8*@force-grid-base + 7*@force-grid-gutter;
   }
 
   &-9 {
-    height: 9*@force-grid-base + 8*@force-grid-gutter;
+    min-height: 9*@force-grid-base + 8*@force-grid-gutter;
   }
 
   &-10 {
-    height: 10*@force-grid-base + 9*@force-grid-gutter;
+    min-height: 10*@force-grid-base + 9*@force-grid-gutter;
   }
 
   &-11 {
-    height: 11*@force-grid-base + 10*@force-grid-gutter;
+    min-height: 11*@force-grid-base + 10*@force-grid-gutter;
   }
 
   &-12 {
-    height: 12*@force-grid-base + 11*@force-grid-gutter;
+    min-height: 12*@force-grid-base + 11*@force-grid-gutter;
   }
 }
 
