--- a/assets/styles/_less/theme/theme-buttons.less
+++ b/assets/styles/_less/theme/theme-buttons.less
@@ -1,9 +1,9 @@
 .btn, button {
-
   font-weight: 400;
-  padding: 12px 20px;
+  padding: 8px 40px;
   border-radius: 4px;
   text-transform: uppercase;
+  font-size: 12px;
 }
 
 .btn-default {
