--- a/assets/styles/_less/theme/theme-home.less
+++ b/assets/styles/_less/theme/theme-home.less
@@ -12,6 +12,8 @@
   padding: 0;
   min-height: 100vh;
   @media (max-width: @screen-lg) {
+    background: url("@{image-path-theme}/backgrounds/bck-001.jpg") right center no-repeat #fff;
+    background-size: cover;
   }
   @media (max-width: @screen-sm) {
 
@@ -80,13 +82,28 @@
 }
 
 .menu-indicator {
-  position: absolute;
-  width: 141px;
-  right: -24px;
-  bottom: 0;
+  position: relative;
+  margin-right: -25px;
+  min-height: 24em;
+  @media (max-width: @screen-md) {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+    height: 67px;
+  }
   .list-indicator {
     width: 141px;
     margin: 0;
+    right: -16px;
+    bottom: 0;
+    position: absolute;
+    @media (max-width: @screen-md) {
+      width: 100%;
+      right: 0;
+    }
+    .clearfix();
     a {
       color: @white;
     }
@@ -95,6 +112,11 @@
     height: 67px;
     padding: 24px 0 0 0;
     text-indent: -35px;
+    @media (max-width: @screen-md) {
+      width: 25%;
+      float: left;
+      text-align: center;
+    }
     &.inactive {
       background: url("@{image-path-theme}/backgrounds/bck-menu-inactive.jpg") center left no-repeat #5c7ac9;
       background-size: cover;
